[tool.poetry]
name = "k2s3"
version = "0.1.0"
description = ""
authors = ["Bhargav Anand <rjn143@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
attrs = "^21.2.0"
janus = "^0.6.1"
typer = "^0.3.2"
loguru = "^0.5.3"
psutil = "^5.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
k2s3 = "k2s3.cli:app"